# chisel-libtooling

./: CMakeLists.txt
cmake/: FindClang.cmake
examples/: conditional.c.orig.c  mkdir-5.2.1.c.orig.c  simple.c  test-m.sh
include/: CommonStatementVisitor.h  GlobalReduction.h  LocalReduction.h  RemoveUnusedFunction.h  Report.h  RewriteUtils.h  SimplifyIf.h  Stats.h  StringUtils.h  Transformation.h  TransformationManager.h  VectorUtils.h
src/: CMakeLists.txt  GlobalReduction.cc  RemoveUnusedFunction.cc  SimplifyIf.cc  TransformationManager.cc  chisel.cc  main.cc
src/actions/: frontendaction.cc  frontendaction.h
src/consumer/: consumer.cc  consumer.h
src/core/: GlobalReduction.cc  LocalReduction.cc  Transformation.cc  TransformationManager.cc
src/finder/: finder.cc  finder.h  global_element_finder.cc  global_element_finder.h
src/transformer/: global_element_remover.cc  global_element_remover.h  transformer.cc  transformer.h
src/utils/: Counting.cc  Options.cc  Profiling.cc  Report.cc  RewriteUtils.cc  Stats.cc  StringUtils.cc  utils.cc  utils.h
